--- a/Beden Kitle Endexsi Hesaplayicisi/View/Base.lproj/Main.storyboard
+++ b/Beden Kitle Endexsi Hesaplayicisi/View/Base.lproj/Main.storyboard
@@ -20,12 +20,15 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="iLg-hd-b6X">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                             </imageView>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="DfV-H5-1Mf">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="150" minValue="100" maxValue="230" translatesAutoresizingMaskIntoConstraints="NO" id="DfV-H5-1Mf">
                                 <rect key="frame" x="8" y="647.66666666666663" width="377" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="m31-is-P2Z"/>
                                 </constraints>
                                 <color key="minimumTrackTintColor" red="0.48627454040000001" green="0.57647061349999995" blue="0.73333334920000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <connections>
+                                    <action selector="heightSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="QeL-lM-vsP"/>
+                                </connections>
                             </slider>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GKB-Kl-TkW">
                                 <rect key="frame" x="10" y="612.66666666666663" width="373" height="20"/>
@@ -58,13 +61,19 @@
                                     <fontDescription key="titleFontDescription" name="SinhalaSangamMN-Bold" family="Sinhala Sangam MN" pointSize="30"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="calculateButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lpt-Vb-a7B"/>
+                                </connections>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="vcj-uA-ThE">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="100" minValue="0.0" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="vcj-uA-ThE">
                                 <rect key="frame" x="8" y="718" width="377" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="71U-wh-mO7"/>
                                 </constraints>
                                 <color key="minimumTrackTintColor" red="0.48627454040000001" green="0.57647061349999995" blue="0.73333334920000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <connections>
+                                    <action selector="weightSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cYl-Yx-AZV"/>
+                                </connections>
                             </slider>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vVP-41-wZ1">
                                 <rect key="frame" x="10" y="682.66666666666663" width="373" height="20.333333333333371"/>
@@ -116,6 +125,13 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Hi-8W-GAF" secondAttribute="trailing" constant="10" id="wGs-OM-E63"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="calculateButtonOut" destination="7Hi-8W-GAF" id="WnZ-t9-Xqe"/>
+                        <outlet property="heightLabel" destination="hNm-6B-Tyj" id="qPQ-UJ-igP"/>
+                        <outlet property="heightSlider" destination="DfV-H5-1Mf" id="QSU-nf-gEw"/>
+                        <outlet property="weightLabel" destination="LnT-WA-kJS" id="DqZ-z2-Q9s"/>
+                        <outlet property="weightSlider" destination="vcj-uA-ThE" id="OwH-ss-cVl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
