--- a/Beden Kitle Endexsi Hesaplayicisi/View/Base.lproj/Main.storyboard
+++ b/Beden Kitle Endexsi Hesaplayicisi/View/Base.lproj/Main.storyboard
@@ -144,9 +144,68 @@
                     <view key="view" contentMode="scaleToFill" id="Awq-On-Xdm">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="rj9-sc-IZb">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P1y-Zb-lJK">
+                                <rect key="frame" x="10" y="748" width="373" height="50"/>
+                                <color key="backgroundColor" red="0.48627454040000001" green="0.57647061349999995" blue="0.73333334920000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="nH1-Mb-wVM"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="RECALCULATE">
+                                    <fontDescription key="titleFontDescription" name="SinhalaSangamMN-Bold" family="Sinhala Sangam MN" pointSize="30"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="calculateButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6zY-wY-ip7"/>
+                                    <action selector="recalculateButton:" destination="X2k-Bl-iUZ" eventType="touchUpInside" id="qT5-D6-Y5S"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iZo-WI-3A4">
+                                <rect key="frame" x="131.66666666666669" y="365.66666666666669" width="129.66666666666669" height="121"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RESULT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1i-dG-Kpb">
+                                        <rect key="frame" x="17.333333333333343" y="0.0" width="95" height="37"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                        <color key="textColor" red="0.48627454040000001" green="0.57647061349999995" blue="0.73333334920000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GnL-Ej-4T9">
+                                        <rect key="frame" x="31.333333333333343" y="42" width="67" height="37"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="31"/>
+                                        <color key="textColor" red="0.48627454040000001" green="0.57647061349999995" blue="0.73333334920000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some eat ..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xm-pN-1UP">
+                                        <rect key="frame" x="0.0" y="84" width="129.66666666666666" height="37"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" red="0.48627454040000001" green="0.57647061349999995" blue="0.73333334920000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="1HK-Ij-oJz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1HK-Ij-oJz" firstAttribute="bottom" secondItem="rj9-sc-IZb" secondAttribute="bottom" id="0LU-eJ-d38"/>
+                            <constraint firstItem="1HK-Ij-oJz" firstAttribute="trailing" secondItem="rj9-sc-IZb" secondAttribute="trailing" id="2vi-cp-mAT"/>
+                            <constraint firstItem="rj9-sc-IZb" firstAttribute="top" secondItem="1HK-Ij-oJz" secondAttribute="top" id="A91-iT-pgH"/>
+                            <constraint firstItem="P1y-Zb-lJK" firstAttribute="leading" secondItem="1HK-Ij-oJz" secondAttribute="leading" constant="10" id="DYB-SB-qr3"/>
+                            <constraint firstItem="1HK-Ij-oJz" firstAttribute="trailing" secondItem="P1y-Zb-lJK" secondAttribute="trailing" constant="10" id="Ety-eh-anQ"/>
+                            <constraint firstItem="rj9-sc-IZb" firstAttribute="leading" secondItem="1HK-Ij-oJz" secondAttribute="leading" id="Fsq-VV-2YD"/>
+                            <constraint firstItem="1HK-Ij-oJz" firstAttribute="bottom" secondItem="P1y-Zb-lJK" secondAttribute="bottom" constant="20" id="b24-Gn-3Zj"/>
+                            <constraint firstItem="iZo-WI-3A4" firstAttribute="centerY" secondItem="Awq-On-Xdm" secondAttribute="centerY" id="jGc-Is-RAZ"/>
+                            <constraint firstItem="iZo-WI-3A4" firstAttribute="centerX" secondItem="Awq-On-Xdm" secondAttribute="centerX" id="mTq-ji-dn0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="adviceLabel" destination="3xm-pN-1UP" id="5wB-Xk-2W5"/>
+                        <outlet property="resultLabel" destination="GnL-Ej-4T9" id="oKt-zt-5q0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9GT-Wh-nzV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
